--- a/src/components/carousel.astro
+++ b/src/components/carousel.astro
@@ -15,7 +15,7 @@ var backFunction = `javascript:goForw(${carouselIndex});`
 ---
 <div class="carousel">
     <a href={forwFunction}>
-      <img src="/assets/arrows/L.svg" class="button" draggable="false">
+      <img src="/assets/arrows/L.svg" class="button" draggable="false" alt={`Move Carousel ${carouselIndex} Forward.`}>
     </a>
     <ul class="imgs">
       <img src="/assets/blank.png" draggable="false">
@@ -23,7 +23,7 @@ var backFunction = `javascript:goForw(${carouselIndex});`
       <img src="/assets/blank.png" draggable="false">
     </ul>
     <a href={backFunction}>
-      <img src="/assets/arrows/R.svg" class="button" draggable="false">
+      <img src="/assets/arrows/R.svg" class="button" draggable="false" alt={`Move Carousel ${carouselIndex} Backward.`}>
     </a>
 </div>
 <script is:inline>
