--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -10,7 +10,7 @@ import '../styles/header.scss'
     <div>
       <div class="nav-info">
         <h3>Navigation</h3>
-        <img id="mob-nav-clse" class="icon mob-nav-clse" src="/assets/icons/X.svg">
+        <img id="mob-nav-clse" class="icon mob-nav-clse" alt="Close Sidebar Navigation" src="/assets/icons/X.svg">
       </div>
       <a href="/" class="btn">Home</a>
       <a href="/mission" class="btn">Mission</a>
@@ -19,7 +19,7 @@ import '../styles/header.scss'
       <a href="/sign-up" class="btn primary">Sign Up</a>
 <!--  <a href="/portal" class="btn">Portal</a>-->
     </div>
-    <img id="nav-hbg" class="nav-hbg" src="/assets/icons/hamburger-large.svg"/>
+    <img id="nav-hbg" class="nav-hbg" alt="Open Sidebar Navigation" src="/assets/icons/hamburger-large.svg"/>
   </nav>
   <div class="social">
     <a href="https://instagram.com/4goodgraphics" id="instagram"></a>
