--- a/src/pages/members/rien.astro
+++ b/src/pages/members/rien.astro
@@ -33,9 +33,7 @@ var userData = {
     city: 'Bay Area', 
     state: '',
   }, 
-  bio: {
-    w1: 'the',
-  }, 
+  bio: {}, 
   socials: [
     {
       url: 'https://linkedin.com/in/the-only-rien-gupta', 
