--- a/src/pages/members/isabelle.astro
+++ b/src/pages/members/isabelle.astro
@@ -76,7 +76,7 @@ import '../../styles/photos.scss'
       <h2>Portfolio</h2>
       <ul id="photos" style="height: auto; gap: 25px;">
         {userData.portfolio.map((photo) => (
-          <li set:html={photo.html}></li><span>hi</span>
+          <li set:html={photo.html}></li>
         ))}
       </ul>
     </section>
