--- a/src/pages/members/samantha.astro
+++ b/src/pages/members/samantha.astro
@@ -1,12 +1,102 @@
 ---
+import defaultBio from './defaultBio.js'
+import updateUserData from './updateUserData.js'
+
+var userData = {
+  username: 'samantha', 
+  name: 'Samantha (Sam) Wolff',
+  pronunciation: false, 
+  email: {
+    g4g: false,
+    dtech: {
+      year: 25,
+    },
+  }, 
+  pfp: {
+    google: {
+      url: 'AD5-WCnnmJnIpvLyc4r-7-dAAE4rSc8HOVtSXsuDb_xv',
+      a: 'a-',
+    }, 
+  },
+  location: {
+    city: 'Bay Area', 
+    state: '',
+  }, 
+  bio: {
+  }, 
+  socials: [],
+  portfolio: [
+    {
+      img: {
+        element: 'img',
+        path: 'Help-save-the-oceans_1.svg',
+      },
+      capt: `One out of four posters made by me to promote saving the oceans.`,
+      desc: `Made by: <a href="/members/sam">Sam</a>`,
+    },
+    {
+      img: {
+        element: 'img',
+        path: 'Help-save-the-oceans_2.svg',
+      },
+      capt: `Two out of four posters made by me to promote saving the oceans.`,
+      desc: `Made by: <a href="/members/sam">Sam</a>`,
+    },
+    {
+      img: {
+        element: 'img',
+        path: 'Help-save-the-oceans_3.svg',
+      },
+      capt: `Three out of four posters made by me to promote saving the oceans.`,
+      desc: `Made by: <a href="/members/sam">Sam</a>`,
+    },
+    {
+      img: {
+        element: 'img',
+        path: 'Help-save-the-oceans_4.svg',
+      },
+      capt: `Four out of four posters made by me to promote saving the oceans.`,
+      desc: `Made by: <a href="/members/sam">Sam</a>`,
+    },
+  ],
+}
+
+userData = updateUserData(userData)
+
 import Layout from '../../layouts/Layout.astro'
 
 import '../../styles/pages/members.scss'
 import '../../styles/photos.scss'
 ---
-<Layout title="Members">
+<Layout title={userData.nameNoTitle}>
+  <section id="content"></section>
+  <main id="profile" class="profile">
+    <section>
+      <span id="pfp" style={`background-image: url(${userData.pfp.url})`}></span>
+      <h1 id="name">{userData.nameNoTitle}</h1>
+      <a id="email" href={`mailto:${userData.email.address}`}>{userData.email.address}</a>
+      <a id="location" href={userData.location.mapLink}>
+        <div></div>
+        <span>{userData.location.combined}</span>
+      </a>
+      <ul id="socials">
+        {userData.socials.map((social) => (
+          <li>
+            <a href={social.url} target="_blank" style={`background-image: url('${social.icon}')`}></a>
+          </li>
+        ))}
+      </ul>
+      <p id="bio" set:html={userData.bio.result}></p>
+      <h2>Portfolio</h2>
+      <ul id="photos" style="height: auto; gap: 25px;">
+        {userData.portfolio.map((photo) => (
+          <li set:html={photo.html}></li>
+        ))}
+      </ul>
+    </section>
+  </main>
   <script is:inline>
-    var hasAddedMemberInfo = false
+    var hasAddedMemberInfo = true
   </script>
   <script is:inline src="/members.js"></script>
   <script is:inline src="/modal.js"></script>
