update them again

--- a/src/pages/members/gwen.astro
+++ b/src/pages/members/gwen.astro
@@ -6,7 +6,7 @@ var userData = {
   username: 'gwen', 
   name: 'Gwen Patterson', 
   date: 'an unknown date', 
-  graduated: false;
+  graduated: false, 
 }
 
 userData = leftMembers(userData)
