--- a/src/pages/members/juhi.astro
+++ b/src/pages/members/juhi.astro
@@ -6,7 +6,7 @@ var userData = {
   username: 'juhi', 
   name: 'Juji Bantwal', 
   date: '04/07/2023', 
-  graduated: false;
+  graduated: false, 
 }
 
 userData = leftMembers(userData)
