--- a/src/pages/members/sam.astro
+++ b/src/pages/members/sam.astro
@@ -6,7 +6,7 @@ var userData = {
   username: 'sam', 
   name: 'Sam Cheng', 
   date: 'the start of 2023', 
-  graduated: false;
+  graduated: false, 
 }
 
 userData = leftMembers(userData)
