--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -43,6 +43,6 @@ if (dTitle.startsWith(' | ')) dTitle = dTitle.split(' | ')[1]
     <script is:inline src="/script.js"></script>
     <script is:inline src="/header.js"></script>
     <script is:inline src="/footer.js"></script>
-    <!-- <script is:inline src="/eruda.js"></script> -->
+    <script is:inline src="/eruda.js"></script>
   </body>
 </html>
