--- a/src/pages/members/juhi.astro
+++ b/src/pages/members/juhi.astro
@@ -4,7 +4,7 @@ import leftMembers from './leftMembers.js'
 
 var userData = {
   username: 'juhi', 
-  name: 'Juji Bantwal', 
+  name: 'Juhi Bantwal', 
   date: '04/07/2023', 
   graduated: false, 
 }
