--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -6,7 +6,7 @@ const members = [
   'Isabelle Anderson <span id="tag">(Website Designer)</span>', 
   'Amelia Chang', 
   'Luce Dittrich', 
-  'Rien Gupta', 
+  'Rien (Rick) Gupta', 
   'Maya Heiss', 
   'Chloe Mercado', 
   'Hanlin Su', 
