--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -14,6 +14,7 @@ import '../styles/header.scss'
       </div>
       <a href="/" class="btn">Home</a>
       <a href="/mission" class="btn">Mission</a>
+      <a href="/projects" class="btn">Projects</a>
       <a href="/members" class="btn">Members</a>
       <a href="/work" class="btn">Member Work</a>
       <a href="/sign-up" class="btn primary">Sign Up</a>
