--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import '../styles/photos.scss'
       <h2>Empowering Non-Profits Through the Power of Design!</h1>
     </div>
   </Hero>
-  <main id="mission">
+  <main id="mission" class="split">
     <div class="container">
       <section id="mSection">
         <h1>Our Mission</h1>
