--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -11,14 +11,14 @@ import '../styles/photos.scss'
     <div class="container">
       <section>
         <h1>Project Title</h1>
-        <div class="missiontext">
+        <div>
           things things
         </div>
       </section>
       <span class="vHr"></span>
       <section>
         <h1>Project Title</h1>
-        <div class="missiontext">
+        <div>
           things things
         </div>
       </section>
@@ -29,14 +29,14 @@ import '../styles/photos.scss'
     <div class="container">
       <section>
         <h1>Project Title</h1>
-        <div class="missiontext">
+        <div>
           things things
         </div>
       </section>
       <span class="vHr"></span>
       <section>
         <h1>Project Title</h1>
-        <div class="missiontext">
+        <div>
           things things
         </div>
       </section>
@@ -47,14 +47,14 @@ import '../styles/photos.scss'
     <div class="container">
       <section>
         <h1>Project Title</h1>
-        <div class="missiontext">
+        <div>
           things things
         </div>
       </section>
       <span class="vHr"></span>
       <section>
         <h1>Project Title</h1>
-        <div class="missiontext">
+        <div>
           things things
         </div>
       </section>
@@ -65,14 +65,14 @@ import '../styles/photos.scss'
     <div class="container">
       <section>
         <h1>Project Title</h1>
-        <div class="missiontext">
+        <div>
           things things
         </div>
       </section>
       <span class="vHr"></span>
       <section>
         <h1>Project Title</h1>
-        <div class="missiontext">
+        <div>
           things things
         </div>
       </section>
