--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -92,17 +92,19 @@ body {
 }
 
 .vHr, [vHr] {
+  --bg-color: white;
+
   width: 2px;
   height: var(--height);
-  --bg-color: white;
   border-radius: 25px;
 }
 
 .hHr, [hHr] {
+  --bg-color: var(--b-color, white);
+
   margin: var(--marg, 0);
   width: var(--width, 100%);
   height: 2px;
-  --bg-color: var(--b-color, white);
   border-radius: 25px;
 }
 
@@ -112,11 +114,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .gradient {
+  /*  --bg-color: white; /* For browsers that do not support gradients */
+  --bg-color: transparent;
+
   height: 10px;
   width: 100%;
   content: '';
-/*  --bg-color: white; /* For browsers that do not support gradients */
-  --bg-color: transparent;
   background-image: linear-gradient(var(--grad-start, var(--orig-bg-color)), var(--grad-end, #6c78e5)) !important;
 }
 
@@ -155,23 +158,27 @@ section {
 
   &:not(.primary) {
     --bg-color: white;
-    color: black;
     --border-color: black;
+
+    color: black;
   }
   &:not(.primary):hover {
     --bg-color: black;
-    color: white;
     --border-color: white;
+
+    color: white;
   }
   &.primary {
     --bg-color: black !important;
-    color: white !important;
     --border-color: white;
+
+    color: white !important;
   }
   &.primary:hover {
     --bg-color: white !important;
-    color: black !important;
     --border-color: black;
+
+    color: black !important;
   }
 }
 
@@ -184,6 +191,8 @@ section {
   }
 
   &:not(main#mission section .missiontext) {
+    --bg-color: white;
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -195,7 +204,6 @@ section {
     text-align: center;
     background-color: white;
     box-shadow: var(--main-shadow);
-    --bg-color: white;
     color: black;
     border-radius: 25px;
     transition: 500ms ease-in;
@@ -251,63 +259,60 @@ main {
 }
 
 main.split {
+  --padding: 25px;
+
   color: black;
 
   position: relative;
 
-  padding: 25px;
-  width: calc(100% - 50px);
+  width: 100%;
   
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  gap: var(--padding);
   
-  & > .container {
-    position: relative;
-    left: 50%;
-    transform: translate(-50%, 0);
+  & > section {
+    --bg-color: white;
+    color: black;
 
-    max-width: 1500px;
-    height: 100%;
-  
+    box-sizing: border-box;
+    flex: 1;
     display: flex;
-    flex-direction: row;
-    gap: 25px;
+    flex-direction: column;
+    align-items: center;
+    gap: var(--padding);
+    padding-block: var(--padding);
+
+    &:first-child {
+      padding-inline-start: var(--padding);
+    }
+    &:last-child {
+      padding-inline-start: var(--padding);
+    }
   
-    & > section {
-      max-width: calc(50% - 75px);
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 25px;
-      padding: 25px;
-      --bg-color: white;
-      color: black;
-  
-      &#contact {
-        & h2 {
-          margin-block: 0;
-        }
+    &#contact {
+      & h2 {
+        margin-block: 0;
       }
+    }
   
-      & > div:not([hHr]) {
-        min-height: calc(50% - 50px);
+    & > div:not([hHr]) {
+      min-height: calc(50% - 50px);
   
-        &:not(div.carousel) {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          gap: 25px;
-        }
+      &:not(div.carousel) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: var(--padding);
       }
+    }
         
-      & h1 {
-        text-align: center;
-      }
+    & h1 {
+      text-align: center;
+    }
   
-      &#contact form *:not(button) {
-        width: calc(100% - 20px);
-      }
+    &#contact form *:not(button) {
+      width: calc(100% - 20px);
     }
   }
 }
@@ -379,8 +384,9 @@ main.split {
     text-decoration: none;
 
     & > li {
-      font-size: 22px;
       --bg-color: white;
+
+      font-size: 22px;
       transition: all 500ms ease-out;
       text-align: center;
 
@@ -393,8 +399,9 @@ main.split {
 }
 
 button {
-  width: 170px;
   --bg-color: #2e2e2e;
+
+  width: 170px;
   color: white;
   padding: 12px;
   margin: 10px 0;
@@ -425,9 +432,10 @@ form[method="POST"] {
   max-width: 100% !important;
 
   &:not(section > &) {
+    --bg-color: white;
+
     margin: 25px;
     padding: 25px;
-    --bg-color: white;
   }
 
   section > & {
@@ -458,10 +466,11 @@ form[method="POST"] {
 
   & > :is(input, textarea, select) {
     &::selection {
+      --bg-color: var(--orig-bg-color);
+
       border-radius: 25px;
       
       color: white;
-      --bg-color: var(--orig-bg-color);
     }
   }
 }
@@ -487,9 +496,10 @@ form[action] * {
 }
 
 #modal {
-  border: none;
   --bg-color: white;
   --margin: 50px;
+
+  border: none;
   height: calc(100% - (var(--margin)*2) + 18px);
   width: calc(100% - (var(--margin)*2) + 18px);
   margin: calc(var(--margin) - 9px);
@@ -557,8 +567,9 @@ form[action] * {
   }
 
   #photo {
-    transition: 500ms ease-in;
     --bg-color: white;
+
+    transition: 500ms ease-in;
 
     &:hover {
       transition: 500ms ease-out;
