--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -287,7 +287,7 @@ main.split {
       margin-inline-start: var(--padding);
     }
     &:last-child {
-      margin-inline-start: var(--padding);
+      margin-inline-end: var(--padding);
     }
   
     &#contact {
