--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -67,7 +67,7 @@ import '../styles/photos.scss'
         <!--<img src="/assets/members/hanlin/portfolio/previews/G4G-Ad.png" draggable="false">-->
       </Carousel>
     </section>
-    <div hHr style="width: 800px;"></div>
+    <div hHr style="--width: 850px;"></div>
     <section align="center">
       <h1 id="cphotos">Club Photos</h1>
       <Carousel carouselIndex="1">
