--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -46,13 +46,13 @@ import '../styles/photos.scss'
         Create an informational flyer about CORA with a design targeted at middle school and high school students for their YEA! (Youth Education Advocacy) program. 
       </div>
     </section>
-    <span class="vHr"></span>
+    <!-- <span class="vHr"></span>
     <section>
       <h1>Project Title</h1>
       <div>
         things things
       </div>
-    </section>
+    </section> -->
   </main>
   <div hHr></div>
   <!-- <main class="split">
