--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -269,6 +269,7 @@ main.split {
   
   display: flex;
   flex-direction: row;
+  justify-content: center;
   gap: var(--padding);
   
   & > section {
