--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -1,4 +1,13 @@
-main#mission .missiontext  {
+main#mission
+  & > section  {
+    & > div:not([hHr]):not(div.carousel) {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: var(--padding);
+    }
+  }
+  .missiontext  {
   margin: 0;
   padding: 0;
   max-width: 100%;
