--- a/src/pages/portal.astro
+++ b/src/pages/portal.astro
@@ -3,5 +3,5 @@ import Layout from '../layouts/Layout.astro'
 import '../styles/pages/portal.scss'
 ---
 <Layout title="Member Portal">
-  <script is:inline src="portalpw.js"></script>
+  <script is:inline src="/portalpw.js"></script>
 </Layout>
