--- a/src/pages/scraper.astro
+++ b/src/pages/scraper.astro
@@ -8,6 +8,6 @@
   </head>
   <body>
 
-    <script is:inline src="scraper.js"></script>
+    <script is:inline src="/scraper.js"></script>
   </body>
 </html>
