--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -70,5 +70,5 @@ import '../styles/photos.scss'
       </div>
     </section>
   </main> -->
-  <script is:inline src="modal.js"></script>
+  <script is:inline src="/modal.js"></script>
 </Layout>
