--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -1,4 +1,4 @@
-main#mission
+main#mission {
   & > section > div:not([hHr]):not(div.carousel) {
     display: flex;
     flex-direction: column;
@@ -6,10 +6,11 @@ main#mission
     gap: var(--padding);
   }
   
-  .missiontext  {
-  margin: 0;
-  padding: 0;
-  max-width: 100%;
-  /*  min-width: 500px;  */
-  text-align: center;
+    .missiontext  {
+    margin: 0;
+    padding: 0;
+    max-width: 100%;
+    /*  min-width: 500px;  */
+    text-align: center;
+  }
 }
