--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -7,68 +7,70 @@ import '../styles/pages/index.scss'
 import '../styles/photos.scss'
 ---
 <Layout title="Projects">
-  <main id="content" class="split">
-    <section>
-      <h1>Amphibian Foundation</h1>
-      <div>
-        Redesign the <a href="https://amphibianfoundation.org/index.php/pages">Why We Do It Page</a> on <a href="https://amphibianfoundation.org">Their Website</a>.
-      </div>
+  <main id="content">
+    <section class="split">
+      <section>
+        <h1>Amphibian Foundation</h1>
+        <div>
+          Redesign the <a href="https://amphibianfoundation.org/index.php/pages">Why We Do It Page</a> on <a href="https://amphibianfoundation.org">Their Website</a>.
+        </div>
+      </section>
+      <span class="vHr"></span>
+      <section>
+        <h1>Treasure Chest Foundation</h1>
+        <div>
+          They'd like to update it a little to make it more “fresh,” though they like the current logo IDEA and the purple.
+        </div>
+      </section>
     </section>
-    <span class="vHr"></span>
-    <section>
-      <h1>Treasure Chest Foundation</h1>
-      <div>
-        They'd like to update it a little to make it more “fresh,” though they like the current logo IDEA and the purple.
-      </div>
+    <div hHr></div>
+    <section class="split">
+      <section>
+        <h1>S.A.V.E Foundation</h1>
+        <div>
+          Chao from S.A.V.E Foundation wants us to create Instagram posts for #herstory. This is where S.A.V.E posts inspiring stories of strong and brave women.
+        </div>
+      </section>
+      <span class="vHr"></span>
+      <section>
+        <h1>Vanni Aid</h1>
+        <div>
+          We are currently working with Vanni Aid to re-do their website! Adarsh and one other peoson are working on this .
+        </div>
+      </section>
     </section>
-  </main>
-  <div hHr></div>
-  <main class="split">
-    <section>
-      <h1>S.A.V.E Foundation</h1>
-      <div>
-        Chao from S.A.V.E Foundation wants us to create Instagram posts for #herstory. This is where S.A.V.E posts inspiring stories of strong and brave women.
-      </div>
+    <div hHr></div>
+    <section class="split">
+      <section>
+        <h1>CORA</h1>
+        <div>
+          Create an informational flyer about CORA with a design targeted at middle school and high school students for their YEA! (Youth Education Advocacy) program. 
+        </div>
+      </section>
+      <!-- <span class="vHr"></span>
+      <section>
+        <h1>Project Title</h1>
+        <div>
+          things things
+        </div>
+      </section> -->
     </section>
-    <span class="vHr"></span>
-    <section>
-      <h1>Vanni Aid</h1>
-      <div>
-        We are currently working with Vanni Aid to re-do their website! Adarsh and one other peoson are working on this .
-      </div>
-    </section>
-  </main>
-  <div hHr></div>
-  <main class="split">
-    <section>
-      <h1>CORA</h1>
-      <div>
-        Create an informational flyer about CORA with a design targeted at middle school and high school students for their YEA! (Youth Education Advocacy) program. 
-      </div>
-    </section>
-    <!-- <span class="vHr"></span>
-    <section>
-      <h1>Project Title</h1>
-      <div>
-        things things
-      </div>
+    <div hHr></div>
+    <!-- <section class="split">
+      <section>
+        <h1>Project Title</h1>
+        <div>
+          things things
+        </div>
+      </section>
+      <span class="vHr"></span>
+      <section>
+        <h1>Project Title</h1>
+        <div>
+          things things
+        </div>
+      </section>
     </section> -->
   </main>
-  <div hHr></div>
-  <!-- <main class="split">
-    <section>
-      <h1>Project Title</h1>
-      <div>
-        things things
-      </div>
-    </section>
-    <span class="vHr"></span>
-    <section>
-      <h1>Project Title</h1>
-      <div>
-        things things
-      </div>
-    </section>
-  </main> -->
   <script is:inline src="/modal.js"></script>
 </Layout>
