--- a/src/pages/welcome.astro
+++ b/src/pages/welcome.astro
@@ -8,12 +8,11 @@ import '../styles/welcome.scss'
     <meta property="title" content="Graphics for Good">
     <meta property="og:title" content="Graphics for Good">
     <title>Graphics for Good</title>
-    <link rel="stylesheet" href="welcome.css" />
   </head>
   <body>
     <iframe></iframe>
     <div id="welcome-bg"></div>
-    <div id="welcome">
+    <main id="welcome">
       <div>
         <section top>
           <h1>Welcome to Graphics for Good</h1>
@@ -32,7 +31,7 @@ import '../styles/welcome.scss'
           <a onclick="window.close()" class="btn">Close</a>
         </section>
       </div>
-    </div>
+    </main>
     <script>
       function setCookie(cname,cvalue,exdays,cpath='/') {
       const d = new Date();
