--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -1,4 +1,4 @@
-main#mission {
+section#mission {
   & > section > div:not([hHr]):not(div.carousel) {
     display: flex;
     flex-direction: column;
