--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -18,18 +18,20 @@ const members = [
 
 
 import Layout from '../layouts/Layout.astro'
+import Hero from '../conponents/Hero.astro'
 
 import '../styles/pages/members.scss'
-import '../styles/hero.scss'
 import '../styles/photos.scss'
 ---
 <Layout title="Members">
-  <section class="hero fullHeight" id="content">
-    <ul id="menu">
-      <h1>Club Members</h1>
-      {members.map((member) => ( <a href={`/members/${member.split(' ')[0].toLowerCase()}`}><li set:html={member}></li></a> ))}
-    </ul>
-  </section>
+  <main id="content">
+    <Hero classItems="fullHeight">
+      <ul id="menu">
+        <h1>Club Members</h1>
+        {members.map((member) => ( <a href={`/members/${member.split(' ')[0].toLowerCase()}`}><li set:html={member}></li></a> ))}
+      </ul>
+    </section>
+  </main>
   <script is:inline src="/members.js"></script>
   <script is:inline src="/modal.js"></script>
 </Layout>
