--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -18,7 +18,7 @@ const members = [
 
 
 import Layout from '../layouts/Layout.astro'
-import Hero from '../conponents/hero.astro'
+import Hero from '../components/hero.astro'
 
 import '../styles/pages/members.scss'
 import '../styles/photos.scss'
