--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -41,14 +41,15 @@ import '../styles/photos.scss'
     </section>
     <div hHr></div>
     <section class="split">
+      <span class="vHr"></span>
       <section>
         <h1>CORA</h1>
         <div>
           Create an informational flyer about CORA with a design targeted at middle school and high school students for their YEA! (Youth Education Advocacy) program. 
         </div>
       </section>
-      <!-- <span class="vHr"></span>
-      <section>
+      <span class="vHr"></span>
+      <!-- <section>
         <h1>Project Title</h1>
         <div>
           things things
