--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -276,15 +276,19 @@ section.split {
     --bg-color: white;
     color: black;
 
-    box-sizing: border-box;
     flex: 1;
+
+    box-sizing: border-box;
+    margin-block: var(--padding);
+    padding: var(--padding);
+
+    max-width: 50%;
+    
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: var(--padding);
-    margin-block: var(--padding);
-    padding: var(--padding);
-
+    
     &:first-child {
       margin-inline-start: var(--padding);
     }
