--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -4,7 +4,7 @@ import '../styles/header.scss'
 <a id="go2content" href="javascript:scrollToNum()">Skip to Content</a>
 <header class="header">
   <div class="logo-parent">
-    <img class="logo" src="/assets/Logo-Blank.svg" alt="Graphics for Good Logo" title="Our Logo" onclick="location.href = '/'">
+    <img class="logo" src="/assets/Logo-Blank.svg" alt="Graphics for Good Logo" title="Our Logo">
   </div>
   <nav class="nav">
     <div>
